# room619

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/Infrastructure/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  security.yml
Docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  Instructions.txt  Telemetry-Instructions.md
Infrastructure/: Cargo.toml  README.md
Infrastructure/src/: lib.rs  main.rs
Infrastructure/src/platform/: mod.rs
Infrastructure/src/scheduler/: mod.rs
Infrastructure/src/timer/: mod.rs
Infrastructure/tests/: integration_test.rs
LowLevel/: Cargo.toml
LowLevel/src/: main.rs
Telemetry/: Cargo.toml  README.md
Telemetry/Tests/: integration.rs  run_tests.ps1
Telemetry/src/: lib.rs  main.rs
