[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"
authors = ["Telemetry Team <telemetry@example.com>"]
description = "Telemetry block crate for room619 (component template)."

[lib]
name = "telemetry"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
